hallo world画面を作成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Memories-Collection</string>
+    <string name="hallo_world">Hallo World</string>
 </resources>
