--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Memories-Collection</string>
     <string name="hallo_world">Hallo World</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_main">Map</string>
 </resources>
