--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="todo">TODO</string>
     <string name="todo">TODO</string>
     <string name="todo">TODO</string>
+    <string name="todo">TODO</string>
 </resources>
