アプリ名、アイコンを設定。
Signed-off-by: Takuya Shintani <2180264@ecccomp.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Memories-Collection</string>
+    <string name="app_name">思い出コレクション</string>
     <string name="hallo_world">Hallo World</string>
     <string name="ハードキャストされたテキスト">戻る</string>
     <string name="コレクション">コレクション</string>
